fix mjx y-overflow

--- a/app/Modules/Vyfuk/Core/styles/other.scss
+++ b/app/Modules/Vyfuk/Core/styles/other.scss
@@ -47,3 +47,8 @@ a.btn:hover, a.dropdown-item:hover {
 .accordion-button:focus {
     box-shadow: none;
 }
+
+mjx-container {
+    overflow-x: auto;
+    overflow-y: hidden;
+}
